--- a/style.css
+++ b/style.css
@@ -1,12 +1,33 @@
 /* reset.css */
+
 * {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 /* custom css */
 :root {
   --bgdColor: #212121;
   --white: #fff;
-  --navbar: #3a4042;
-  --button: #50717b;
+  --navbar-color: #3a4042;
+  --bar: #50717b;
   font-size: 16px;
+  font-family: "Montserrat", sans-serif;
+  color: var(--white);
+}
+
+body {
+  background-color: var(--bgdColor);
+  color: var(--white);
+}
+/* navbar css */
+.navbar {
+  background-color: var(--navbar-color);
+  display: flex;
+}
+
+.navbar > img {
+  margin-left: 20px;
+  width: 9vh;
+  padding: 10px;
 }
